fixed homepage alignment for 720p screen

--- a/TokuCinema/src/app/components/pages/home/styles/tablet.scss
+++ b/TokuCinema/src/app/components/pages/home/styles/tablet.scss
@@ -13,7 +13,6 @@
 }
 
 section {
-  margin-top: 5%;
   display: flex;
   flex-flow: wrap;
   width: 100%;
